<resources>
    <string name="app_name">FireStorePoC</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="dob">Date of birth</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
</resources>
